grammar.txt
CODE DELIMITER START -> <STATEMENT> <CODE DELIMITER END>

STATEMENT  
    -> <DECLARATION DELIMITER>      <STATEMENT DELIMITER> <STATEMENT>
    -> <VARIABLE IDENTIFIER>        <STATEMENT DELIMITER> <STATEMENT>
    -> <INPUT>                      <STATEMENT DELIMITER> <STATEMENT>
    -> <OUTPUT>                     <STATEMENT DELIMITER> <STATEMENT>
    -> <CONDITIONAL DELIMITER START><STATEMENT DELIMITER> <STATEMENT>
    -> <SWITCH DELIMITER>           <STATEMENT DELIMITER> <STATEMENT>
    -> <LOOP DELIMITER START>       <STATEMENT DELIMITER> <STATEMENT> // NOT YET
    -> <FUNCTION DELIMITER START>   <STATEMENT DELIMITER> <STATEMENT>
    -> <EXPRESSION>                 <STATEMENT DELIMITER> <STATEMENT>
    -> <RETURN_OPERATOR>            <STATEMENT DELIMITER> <STATEMENT>
    -> EMPTY


DELIMITER DELIMITER 
    -> <VARIABLE IDENTIFIER>
    -> <VARIABLE IDENTIFIER> <INITIALIZATION DELIMITER> <EXPRESSION>

VARIABLE IDENTIFIER
    -> WALA
    -> <CASTING ASSIGNMENT DELIMITER> <DATA TYPE>

INPUT 
    -> <VARIABLE IDENTIFIER>

OUTPUT 
    -> <EXPRESSION>

CONDITIONAL DELIMITER START
    -> <STATEMENT DELIMITER>
        <CONDITIONAL IF DELIMITER>
        <CONDITIONAL ELSE IF DELIMITER>
        <CONDTIONAL ELSE DELIMITER>
        <CONDTIONAL DELIMITER END>

CONDTIONAL IF DELIMITER
    -> <STATEMENT DELIMITER> 
            <STATEMENT>

CONDITIONAL ELSE IF DELIMITER
    -> <EXPRESSION> <STATEMENT DELIMITER>
            <STATEMENT>
        <CONDITIONAL ELSE IF DELIMITER>
    -> EMPTY

CONDTIONAL ELSE DELIMITER
    -> <STATEMENT DELIMITER> 
            <STATEMENT>

SWITCH DELIMITER
    -> <STATEMENT DELIMITER>
            <CASE DELIMITER>
            <DEFAULT CASE DELIMITER>
        <CONDTIONAL DELIMITER END>

CASE DELIMITER
    -> <LITERAL> <STATEMENT DELIMITER>
            <STATEMENT>
        <CASE DELIMITER>
    -> <LITERAL> <STATEMENT DELIMITER>
            <STATEMENT>
        <BREAK DELIMITER> <STATEMENT DELIMITER>
        <CASE DELIMITER>
    ->  EMPTY

DEFAULT CASE DELIMITER
    -> <STATEMENT DELIMITER>
        <STATEMENT>
    -> <STATEMENT DELIMITER>
        <STATEMENT>
        <BREAK DELIMITER>
    -> EMPTY

FUNCTION DELIMITER START
    -> <FUNCTION IDENTIFIER> <FUNCTION ARGUMENTS> <STATEMENT DELIMITER>
            <STATEMENT>
        <FUNCTION DELIMITER END>
        
RETURN OPERATOR
    -> <EXPRESSION>

EXPRESSION
	-> <LITERAL>
	-> <CONCATENATION>
	-> <FUNCTION CALL>
	-> <VARIABLES>
	-> <CONDITIONAL EXPRESSION>
	-> <ARITHMETIC EXPRESSION>
    -> <CASTING OPERATOR> 

CASTING OPERATOR
    -> <VARIABLE IDENTIFIER> <DATA TYPE>
    -> <VARIABLE IDENTIFIER> <CASTING SEPARATOR> <DATA TYPE>
    

FUNCTION CALL
	-> <FUNCTION IDENTIFIER> <FUNCTION ARGUMENTS>

FUNCTION ARGUMENTS
	-> <FUNCTION_ARGUMENT_DELIMITER> <VARIABLE IDENTIFIER> <FUNCTION INFINITE ARITY> <INFINITE_ARITY_DELIMITER>
	-> WALA

FUNCTION INFINITE ARITY
	-> <PARAMETER_DELIMITER> <FUNCTION_ARGUMENT_DELIMITER> <VARIABLE IDENTIFIER> <FUNCTION INFINITE ARITY>
	-> WALA

ARITHMETIC EXPRESSION
	-> <MATH OPERATOR> <EXPRESSION> <PARAMETER_DELIMITER> <EXPRESSION>

CONDITIONAL EXPRESSION
	-> <UNARY_CONDITIONAL_OPERATION> <EXPRESSION>
	-> <BINARY_CONDITIONAL_OPERATION> <EXPRESSION> <PARAMMETER_DELIMITER> <EXPRESSION>
	-> <MULTIPLE_CONDITIONAL_OPERATION> <EXPRESSION> <CONDITIONAL_EXPRESSION_INFINITE_ARITY> <INFINITE_ARITY_DELIMITER>

CONDITIONAL_EXPRESSION_INFINITE_ARITY
	-> <PARAMETER_DELIMITER> <EXPRESSION> <CONDITIONAL_EXPRESSION_INFINITE ARITY>
	-> WALA

CONCATENATION
	-> <EXPRESSION> <CONCATENATION_INFINITE_ARITY> <INFINITE_ARITY_DELIMITER>

<CONCATENATION_INFINITE_ARITY>
	-> <PARAMETER_DELIMITER> <EXPRESSION> <CONCATENATION_INFINITE_ARITY>
	-> WALA

DATA TYPE
    -> <STRING DATA TYPE>
    -> <INTEGER DATA TYPE>
    -> <FLOATING POINT DATA TYPE>
    -> <BOOLEAN DATA TYPE>
    -> <UNTYPED DATA TYPE>

<LITERAL>
	-> <STRING>
	-> <INTEGER LITERAL>
	-> <FLOAT-POINT LITERAL>
	-> <BOOLEAN LITERAL>

<STRING>
    -> <STRING DELIMITER> <STRING LITERAL> <STRING DELIMITER>

https://courses.cs.washington.edu/courses/cse401/08au/slides/lecture%203-1%20parsing.pdf
